unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-outside-async.js
function f(x) { await x }
